@@ -1,4 +1,4 @@
-JalaliJSCalendar v1.3
+JalaliJSCalendar v1.4
 -------------------
   Author: Ali Farhadi (http://farhadi.ir/)
   Released under the terms of the GNU Public License.
