@@ -142,6 +142,9 @@ Calendar._TT["PART_TODAY"] = " (today)";
 // %s will be replaced with the day name.
 Calendar._TT["DAY_FIRST"] = "Display %s first";
 
+Calendar._TT["SELECT_COLUMN"] = "Select all %ss of this month";
+Calendar._TT["SELECT_ROW"] = "Select all days of this week";
+
 // This may be locale-dependent.  It specifies the week-end days, as an array
 // of comma-separated numbers.  The numbers are from 0 to 6: 0 means Sunday, 1
 // means Monday, etc.
