@@ -1,3 +1,8 @@
+-------------------- 1.4 [2009-04-15] ---------------------
+2009-04-15  Ali Farhadi <ali@farhadi.ir>
+	* calendar-setup.js: Applying patch from 'Emil Sedgh' fixing some bugs.
+	* calendar.js: Adding ability to select an entire row or column just with one click in multiple mode. 
+	
 2009-03-09  Ali Farhadi <ali@farhadi.ir>
 	* calendar.js: applying patch from 'Sina Salek' fixing position bug in IE7
 
